<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/edit_text_style"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtFireService"
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/txt_view_different"
            android:text="@string/ngo_button"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_style"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <Button
                android:id="@+id/btnAinOSaliskendro"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/blue_button"
                android:text="@string/ain_o_salis_kendro"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnAmnestyinternational"
                style="@style/ButtonText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/blue_button"
                android:text="@string/amnesty_international"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnBangladeshHumanRight"
                style="@style/ButtonText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/blue_button"
                android:text="@string/bangladesh_human_rights"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnBangladeshMohilaParishadh"
                style="@style/ButtonText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/blue_button"
                android:text="@string/bangladesh_mohila_parishad"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnBangladeshNationalWomenLawerAssociations"
                style="@style/ButtonText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/blue_button"
                android:text="@string/bangladesh_national_women_lawer_association"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnBRAC"
                style="@style/ButtonText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/blue_button"
                android:text="@string/brac"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnDemocracyWatch"
                style="@style/ButtonText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/blue_button"
                android:text="@string/democracy_watch"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnOdhikar"
                style="@style/ButtonText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/blue_button"
                android:text="@string/odhikar"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnUCEP"
                style="@style/ButtonText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/blue_button"
                android:text="@string/ucep"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>