<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#008BE5"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linearlayout_bg"
        android:orientation="vertical"
        android:padding="10dp" >

        <Button
            android:id="@+id/btnVictimNumber1"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/button_default_bg"
            android:padding="10dp"
            android:text="@string/number1"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/btnVictimNumber2"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/button_default_bg"
            android:padding="10dp"
            android:text="@string/number2"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/btnVictimNumber3"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/button_default_bg"
            android:padding="10dp"
            android:text="@string/number3"
            android:textColor="@color/Black" />

        <Button
            android:id="@+id/btnVictimNumber4"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/button_default_bg"
            android:padding="10dp"
            android:text="@string/number4"
            android:textColor="@color/Black" />
    </LinearLayout>

</ScrollView>